# nrf8001-arm

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  bindings.h  build.rs
libraries/BLE/: aci.h  aci_queue.c  aci_queue.h  aci_setup.c  aci_setup.h  acilib.c  acilib_if.h  bootloader_setup.c  hal_aci_tl.c  hal_aci_tl.h  io_support.c  io_support.h  lib_aci.c  lib_aci.h
src/: ble_assert.c
